[package]
name = "rpo-xhash-m31"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.14.3"

digest = "0.10.7"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
tinyvec = "1.9.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hashing"
harness = false
