[package]
name = "rpo-xhash-m31"
version = "0.1.0"
edition = "2024"
authors = ["@AbdelStark"]
license = "MIT"
description = "Rust implementation of the RPO‑M31 and XHash‑M31 hash permutations, with a Sponge facade for Circle‑STARKs and zk‑friendly hashing."
readme = "README.md"
homepage = "https://github.com/AbdelStark/rpo-xhash-m31"
repository = "https://github.com/AbdelStark/rpo-xhash-m31"
documentation = "https://docs.rs/rpo-xhash-m31"
keywords = ["cryptography", "hash", "stark", "bitcoin"]
categories = ["cryptography", "no-std", "algorithms"]


[dependencies]
bytemuck = "1.14.3"

digest = "0.10.7"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha3 = "0.10.8"
tinyvec = "1.9.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "hashing"
harness = false

[[bin]]
name = "cost_estimator"
path = "src/bin/cost_estimator.rs"
